# universal-mcp

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  app_tools.csv  base.py  bump_and_release.sh  dataset.py  docstring_parser.py  index.html  interrupt.py  langgraph.json  local_config.json  local_config.json.example  mkdocs.yml  mock.py  objects.inv  pet_api.py  pets.py  prompt.txt  pyproject.toml  server.py  sitemap.xml  stream.py  test.py  test_bigtool2.py  tool_manager.py
.github/workflows/: publish-pypi.yml  publish.yml  pull-request-checks.yml  shared.yml
Sandbox/: __init__.py  e2b_sandbox.py  in_process_sandbox.py  subprocess_sandbox.py
api/: index.html
api/adapters/: index.html
api/applications/: index.html
api/client/: index.html
api/config/: index.html
api/exceptions/: index.html
api/integrations/: index.html
api/registry/: index.html
api/servers/: index.html
api/stores/: index.html
api/tools/: index.html
api/types/: index.html
applications/: index.html
architecture/: index.html
architecture/auth-flow/: index.html
architecture/class-hierarchy/: index.html
architecture/overview/: index.html
architecture/request-flow/: index.html
architecture/server-init/: index.html
architecture/tool-registration/: index.html
docs/: README.md  applications.md  index.md  integrations.md  mcp_client_guide.md  migration.md  servers.md  stores.md  tools_framework.md
docs/api/: adapters.md  applications.md  client.md  config.md  exceptions.md  index.md  integrations.md  registry.md  servers.md  stores.md  tools.md  types.md
docs/architecture/: auth-flow.md  class-hierarchy.md  index.md  overview.md  request-flow.md  server-init.md  tool-registration.md
docs/examples/agents/: github.py
docs/examples/applications/: calculator.py
examples/: fastmcp_client_example.py  simple_client.py  simple_notion_example.py
examples/agents/: github.py  lanngraph.py
examples/applications/: calculator.py
integrations/: index.html
playground/: README.md  __main__.py  client.py  index.html  schema.py  settings.py  streamlit.py  utils.py
playground/agents/: README.md  auto_agent.py  react.py
scripts/: collect_tools.py
search/: search_index.json
servers/: index.html
src/agent/: graph.py
src/agentr/: agentr.py  client.py  integration.py  registry.py  server.py
src/agents/: auto.py  base.py  cli.py  react.py  simple.py
src/agents/codeact/: __init__.py  sandbox.py  test.py
src/evals/: dataset.py  evaluators.py  run.py  test.py  utils.py
src/evals/datasets/: creative_writing.jsonl  exact.jsonl  tasks.jsonl
src/playground/: README.md  __init__.py  __main__.py  client.py  run_playground.py  schema.py  service.py  settings.py  streamlit.py
src/playground/agents/: react.py
src/playground/memory/: __init__.py  sqlite.py
src/tests/: conftest.py  test_agents.py  test_api_generator.py  test_api_integration.py  test_applications.py  test_apps.py  test_cli_agent.py  test_cli_chat.py  test_local_registry.py  test_localserver.py  test_stores.py  test_tool.py  test_tool_manager.py  test_zenquotes.py
src/universal_mcp/: __init__.py  __main__.py  agent.py  analytics.py  cli.py  config.py  exceptions.py  logger.py  sdk.py  types.py
src/universal_mcp/agentr/: README.md  __init__.py  agentr.py  base_client.py  client.py  integration.py  registry.py  server.py
src/universal_mcp/agents/: __init__.py  auto.py  base.py  bigtool_agent.py  builder.py  cli.py  cli_agent.py  hil.py  llm.py  meta_agent.py  react.py  simple.py  test_meta.py  tool_node.py  tools.py  utils.py
src/universal_mcp/agents/autoagent/: __init__.py  __main__.py  context.py  graph.py  prompts.py  state.py  studio.py  tools.py  utils.py
src/universal_mcp/agents/bigtool/: __init__.py  __main__.py  agent.py  context.py  graph.py  prompts.py  state.py  utils.py
src/universal_mcp/agents/bigtool2/: __init__.py  __main__.py  agent.py  context.py  graph.py  prompts.py
src/universal_mcp/agents/bigtoolcache/: __init__.py  __main__.py  agent.py  context.py  graph.py  prompts.py
src/universal_mcp/agents/codeact/: test.py
src/universal_mcp/agents/planner/: __init__.py  __main__.py  agent.py  graph.py  prompts.py  state.py
src/universal_mcp/agents/shared/: agent_node.py  tool_node.py
src/universal_mcp/applications/: README.md  __init__.py  application.py  mcp_app.py  sample_tool_app.py  utils.py
src/universal_mcp/client/: __init__.py  __main__.py  agent.py  chat_client.py  cli.py  client.py  oauth.py  token_store.py  transport.py
src/universal_mcp/connections/: __init__.py  connection.py
src/universal_mcp/crontabs/: __init__.py  models.py  registry.py  scheduler.py
src/universal_mcp/integrations/: __init__.py  agentr.py  integration.py  oauth_helpers.py
src/universal_mcp/react_agent/: __init__.py  configuration.py  graph.py  prompts.py  run_graph.py  state.py  tools.py  utils.py
src/universal_mcp/sandbox/: __init__.py  code_tool.py  in_process_sandbox.py  sandbox.py  sandbox_worker.py  subprocess_sandbox.py
src/universal_mcp/servers/: __init__.py  server.py
src/universal_mcp/skills/: __init__.py  installer.py  registry.py
src/universal_mcp/stores/: __init__.py  base.py  environment.py  file.py  keyring.py  memory.py  postgres.py  sqlite.py  store.py
src/universal_mcp/templates/: README.md.j2  api_client.py.j2
src/universal_mcp/tools/: README.md  __init__.py  adapters.py  func_metadata.py  local_registry.py  manager.py  registry.py  tools.py  utils.py
src/universal_mcp/utils/: __init__.py  agentr.py  api_generator.py  common.py  docgen.py  docstring_parser.py  dump_app_tools.py  installation.py  loader.py  openapi.py  preprocessor.py  prompts.py  readme.py  singleton.py  templates.py  test.py  testing.py
stores/: index.html
tests/: test_connections.py  test_crontabs.py  test_integration_connection.py  test_local_registry.py  test_mcp_app.py  test_mcp_client_integration.py  test_oauth_helpers.py  test_sandbox.py  test_sdk.py  test_stores.py
tools_framework/: index.html
(+105 files in other folders)
